--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                             <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
-                            <button type="submit"><a href="mailto:jathuyuwa@gmail.com"><font color="white">Send message</font></a></button>
+                            <button type="submit"><a href="mailto:jathuyuwa@gmail.com">Send message</a></button>
                         </div>
                     </form><br><br>
                     <div class="icons">
