--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
+<!-- Created By Jathishwarya -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,6 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 </head>
 <body>
@@ -59,7 +60,7 @@
                 <div class="column right">
                     <div class="text">I'm <font color="#37828a"><b>Jathishwarya</b></font> and I'm a <span class="typing-2"></span></div>
                     <p>I am an ambitious and dedicated IT undergraduate at University of Moratuwa with a passion for technology. I have a strong foundation in computer science, basic skills in programming languages like Java, Python, and C. With expertise in web development and software engineering principles, I bring a logical and analytical approach to problem-solving. I am a motivated individual with excellent communication and teamwork skills, eager to contribute and learn in the IT industry. Further I'm highly enthusiastic about mathematical things especially related with statistics.</p>
-                    <a href="#">Download CV</a>
+                    <a href="images/ResumeFinal_204080D.pdf">Download CV</a>
                     <!-- <a href="#">Achievements</a> -->
                 </div>
             </div>
@@ -282,6 +283,7 @@
                         <a href="https://www.instagram.com/vjathu_2000/"><i class="fab fa-instagram fa-2xl"></i></a>
                         <a href="https://www.hackerrank.com/venu_jathu2000?hr_r=1"><i class="fab fa-brands fa-hackerrank fa-2xl"></i></a>
                         <a href="https://medium.com/@vsjathu2000"><i class="fab fa-brands fa-medium fa-2xl"></i></a>
+                        <a href="https://www.credential.net/profile/jathishwaryavenugopalavanithasan481040/wallet"><i class="fas fa-solid fa-file-certificate fa-2xl"></i></i></a>
                     </div>
                 </div>
             </div>
