--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#education" class="menu-btn">Education</a></li>
+                <li><a href="#teams" class="menu-btn">Education</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#projects" class="menu-btn">Projects</a></li>
+                <li><a href="#services" class="menu-btn">Projects</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
