--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Jathishwarya <br>Venugopal</div>
+                <div class="text-2">Jathishwarya <br>Venugopalavanithasan</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="https://wa.link/aahwfg">Say Hello!</a>
             </div>
