--- a/index.html
+++ b/index.html
@@ -38,18 +38,6 @@
     </nav>
 
     <!-- home section start -->
-    <section class="home" id="home">
-        <div class="max-width">
-            <div class="home-content">
-                <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Jathishwarya <br>Venugopal</div>
-                <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="https://wa.link/aahwfg">Say Hello!</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- home section start -->
 <section class="home" id="home">
     <div class="max-width">
         <div class="home-content">
@@ -61,6 +49,23 @@
     </div>
 </section>
 
+    <!-- about section start -->
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">About me</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="images/profile-01.png" alt="">
+                </div>
+                <div class="column right">
+                    <div class="text">I'm <font color="#37828a"><b>Jathishwarya</b></font> and I'm a <span class="typing-2"></span></div>
+                    <p>I am an ambitious and dedicated IT undergraduate at University of Moratuwa with a passion for technology. I have a strong foundation in computer science, basic skills in programming languages like Java, Python, and C. With expertise in web development and software engineering principles, I bring a logical and analytical approach to problem-solving. I am a motivated individual with excellent communication and teamwork skills, eager to contribute and learn in the IT industry. Further I'm highly enthusiastic about mathematical things especially related with statistics.</p>
+                    <a href="images/ResumeFinal_204080D.pdf">Download CV</a>
+                    <!-- <a href="#">Achievements</a> -->
+                </div>
+            </div>
+        </div>
+    </section>
 
      <!-- teams section start -->
      <section class="teams" id="teams">
