--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <a href="https://wa.link/aahwfg">Say Hello!</a>
             </div>
         </div>
+        <div class="home_img"></div>
     </section>
 
     <!-- about section start -->
