--- a/index.html
+++ b/index.html
@@ -112,6 +112,24 @@
         </div>
     </section>
 
+    <div class="section-gap"></div>
+
+    <!-- Experience Section -->
+<section class="exp" id="exp">
+    <div class="max-width">
+      <h2 class="title">My Experience</h2>
+      <div class="experience-container">
+        <div class="card">
+          <div class="box">
+            <img src="images/NCINGALogo.png" alt="">
+            <div class="text">J/Vadamaradchy Hindu Girls' College, Point-pedro</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+
     <!-- skills section start -->
     <section class="skills" id="skills">
         <div class="max-width">
