--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
         <div class="card">
           <div class="box">
             <img src="images/NCINGALogo.png" alt="">
-            <div class="text">J/Vadamaradchy Hindu Girls' College, Point-pedro</div>
+            <div class="text">I collaborated with the engineering team to design and implement a microservices-based architecture for an enterprise-level financial data processing and reconciliation system. A key part of this work involved contributing to the CEFT Reconciliation Project, where I developed scalable microservices to enable real-time reconciliation of financial transactions across multiple institutions, ensuring accuracy and reducing operational inefficiencies. Additionally, I worked on the Captive Portal Project, integrating backend services with a secure and user-friendly portal for streamlined client onboarding and secure access to financial tools. These projects leveraged modular microservices to enhance system scalability, reliability, and efficiency while improving overall user experience.
+                  
+            </div>
           </div>
         </div>
       </div>
@@ -186,14 +188,14 @@
                     <div class="bars">
                         <div class="info">
                             <span>MySQL</span>
-                            <span>70%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line mysql"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Figma</span>
-                            <span>75%</span>
+                            <span>Java</span>
+                            <span>70%</span>
                         </div>
                         <div class="line figma"></div>
                     </div>
