--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="column right">
                     <div class="text">I'm <font color="#37828a"><b>Jathishwarya</b></font> and I'm a <span class="typing-2"></span></div>
                     <p>I am an ambitious and dedicated IT undergraduate at University of Moratuwa with a passion for technology. I have a strong foundation in computer science, basic skills in programming languages like Java, Python, and C. With expertise in web development and software engineering principles, I bring a logical and analytical approach to problem-solving. I am a motivated individual with excellent communication and teamwork skills, eager to contribute and learn in the IT industry. Further I'm highly enthusiastic about mathematical things especially related with statistics.</p>
-                    <a href="images/ResumeFinal_204080D.pdf">Download CV</a>
+                    <a href="images/Jathishwarya_SE.pdf">Download CV</a>
                     <!-- <a href="#">Achievements</a> -->
                 </div>
             </div>
