Experience section odified

--- a/index.html
+++ b/index.html
@@ -115,21 +115,21 @@
     <div class="section-gap"></div>
 
     <!-- Experience Section -->
-<section class="exp" id="exp">
-    <div class="max-width">
-      <h2 class="title">My Experience</h2>
-      <div class="experience-container">
-        <div class="card">
-          <div class="box">
-            <img src="images/NCINGALogo.png" alt="">
-            <div class="text">I collaborated with the engineering team to design and implement a microservices-based architecture for an enterprise-level financial data processing and reconciliation system. A key part of this work involved contributing to the CEFT Reconciliation Project, where I developed scalable microservices to enable real-time reconciliation of financial transactions across multiple institutions, ensuring accuracy and reducing operational inefficiencies. Additionally, I worked on the Captive Portal Project, integrating backend services with a secure and user-friendly portal for streamlined client onboarding and secure access to financial tools. These projects leveraged modular microservices to enhance system scalability, reliability, and efficiency while improving overall user experience.
-                  
+    <section class="exp" id="exp">
+        <div class="max-width">
+          <h2 class="title" style="margin-bottom: 15px;">My Experience</h2>
+          <div class="experience-container">
+            <div class="card">
+              <div class="box">
+                <img src="images/NCINGALogo.png" alt="" style="max-width: 80%; height: auto; margin-bottom: 15px;">
+                <div class="p" style="text-align: justify;">
+                  I collaborated with the engineering team to design and implement a microservices-based architecture for an enterprise-level financial data processing and reconciliation system. A key part of this work involved contributing to the CEFT Reconciliation Project, where I developed scalable microservices to enable real-time reconciliation of financial transactions across multiple institutions, ensuring accuracy and reducing operational inefficiencies. Additionally, I worked on the Captive Portal Project, integrating backend services with a secure and user-friendly portal for streamlined client onboarding and secure access to financial tools. These projects leveraged modular microservices to enhance system scalability, reliability, and efficiency while improving overall user experience.
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </section>
+      </section>
   
 
     <!-- skills section start -->
